<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8fbaff"
    android:orientation="vertical"
    tools:context="ro.proj.hopon.hoponproject.Sending_password">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_the_code"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:id="@+id/code_ET"
            android:layout_weight="1"
            android:background="#ffffff"
            android:hint="@string/code"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_new_pass"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:hint="@string/new_pass"
            android:id="@+id/new_pass_et_1"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff" />

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:hint="@string/new_pass"
            android:id="@+id/new_pass_et_2"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_new_pass"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>




</LinearLayout>
