<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8fbaff"
    tools:context="ro.proj.hopon.hoponproject.Forgotpass"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"

        android:layout_gravity="center_horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered_email_ID"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                />

            <EditText

                android:layout_marginTop="10dp"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:id="@+id/fgt_pass_email"
                android:hint="@string/email"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="#ffffff"
                />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/send_email"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
