<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#8fbaff"
    android:orientation="vertical"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">



        <ImageView
            android:layout_width="271px"
            android:layout_height="278px"
            android:id="@+id/logo_loginpage"
            android:layout_marginTop="45dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />



        <EditText
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:id="@+id/username_ET"
            android:layout_weight="1"
            android:background="#ffffff"
            android:hint="@string/username"/>


            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="210dp"
                android:layout_height="30dp"
                android:id="@+id/pass_ET"
                android:background="#ffffff"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:gravity="center"
                android:password="true"
                android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log in"
            android:id="@+id/login_BTN"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_TV"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:id="@+id/fgt_pass_TV"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true" />
    </LinearLayout>

</LinearLayout>
